--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,19 @@
   "license": "MIT",
   "dependencies": {
     "@types/jest": "^26.0.14",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.4.0"
+    "ts-jest": "^26.4.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "3.8.0",
     "@typescript-eslint/parser": "3.8.0",
